--- a/application.properties
+++ b/application.properties
@@ -1,10 +1,10 @@
+message = hello springboot!
 
-
-spring.datasource.url= jdbc:mysql://localhost:3306/Emp_DB
+spring.datasource.url= jdbc:mysql://localhost:3306/springboot
 spring.datasource.username= root
 spring.datasource.password= admin
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
- msg="hello"
+
 
 
 #spring.datasource.url= jdbc:h2:mem:mydb
