--- a/application.properties
+++ b/application.properties
@@ -2,7 +2,7 @@ message = hello springboot!
 
 spring.datasource.url= jdbc:mysql://localhost:3306/springboot
 spring.datasource.username= root
-spring.datasource.password= admin
+spring.datasource.password= 
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
 
 
